<resources>
    <string name="app_name">Get2Gather</string>
    <string name="create_event">create event</string>
    <string name="add_contacts">add contacts</string>
    <string name="hello">Hello!</string>
    <string name="new_activity">New activity</string>
    <string name="done">DONE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="phone_hint">Phone</string>
    <string name="name_hint">Full Name</string>
    <string name="login_text">Login</string>
    <string name="get2gather">Get2Gather</string>
    <string name="logout">Logout</string>
    <string name="repeat">Repeat</string>
    <string name="set">set</string>
    <string name="delete_event">Delete Event</string>
    <string name="items_list">Items list</string>
    <string name="duplicate_this_event">duplicate this event</string>
    <string name="members">Members</string>
    <string name="my_events">My Events</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="items_taken">Items taken</string>
    <!-- <string name="my_events">My Events</string>-->
</resources>
