<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0ffa0"
    android:scrollIndicators="right"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activities.CurrentEventActivity">


        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="8"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/currTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                android:gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/alarm"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:background="@color/none"
                android:contentDescription="TODO"
                android:enabled="false"
                android:padding="60dp"
                app:srcCompat="@android:drawable/ic_popup_reminder" />

        </LinearLayout>
        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <TextView
            android:id="@+id/repeatBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="Repeat: "
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp"/>

         <TextView
            android:id="@+id/repeatType"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/blue"
             android:textSize="14dp"/>
    </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:weightSum="10">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="5"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/items_list"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/items_taken"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textSize="15sp" />
        </LinearLayout>
        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/itemsList"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:layout_weight="5">

            </ListView>

            <ListView
                android:id="@+id/takenItemsList"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />
        </LinearLayout>


        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/enterItem"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Add another item"
                android:layout_marginLeft="5dp"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16dp" />

            <ImageButton
                android:id="@+id/addItemBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/simbol_style"
                android:enabled="false"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </LinearLayout>


        <Button
            android:id="@+id/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="Participants"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDeleteEvent"
            style="@style/FirebaseUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/none"
            android:baselineAligned="false"
            android:text="@string/delete_event"
            android:textColor="@color/red" />


    </LinearLayout>
</LinearLayout>