<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="horizontal|vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/titleBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Title"
                    android:layout_marginLeft="5dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dateView"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Date"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="date"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />

                <ImageButton
                    android:id="@+id/calendarButton"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/simbol_style"
                    app:srcCompat="@android:drawable/ic_menu_today"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/timeStr"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Time"
                    android:inputType="time"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />

                <ImageButton
                    android:id="@+id/timeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simbol_style"
                    app:srcCompat="@android:drawable/ic_menu_recent_history" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alert"
                    android:layout_width="330dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center|left"
                    android:text="Alert"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/grey"
                    android:textSize="16dp" />

                <Switch
                    android:id="@+id/alertSwitch"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repeatBtn"
                    android:layout_width="163dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/repeat"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            <TextView
                android:id="@+id/repeatType"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="none"
                android:textSize="12dp"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:textColor="@color/blue"
                />

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:text="Create list"
                android:textColor="#27E753"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/enterItem"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter item"
                    android:layout_marginLeft="5dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />

                <ImageButton
                    android:id="@+id/addItemBtn"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simbol_style"
                    android:enabled="false"
                    app:srcCompat="@android:drawable/ic_menu_add" />

            </LinearLayout>

            <ScrollView
                android:layout_width="183dp"
                android:layout_height="65dp">

                <ListView
                    android:id="@+id/itemList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </ScrollView>

            <Button
                android:id="@+id/addBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="28dp"
                android:background="@drawable/button_style"
                android:text="@string/add_contacts"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="72dp"
                android:background="@drawable/button_style"
                android:enabled="false"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>